# SpeechBot

./: .gitignore  LICENSE  README.md  compose.yaml
frontend/: .dockerignore  Dockerfile  app.py  pyproject.toml
llm_service/: Dockerfile  app.py  pyproject.toml
stt_service/: app.py  pyproject.toml
tts_service/: Dockerfile  app.py  pyproject.toml
