[project]
name = "DeepSeekV3-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.8",
    "huggingface-hub>=0.28.1",
    "llama-cpp-python>=0.3.7",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "ipython>=8.31.0",
    "ruff>=0.9.3",
]

[tool.uv]
default-groups = []