[project]
name = "whisper-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.8",
    "pydantic>=2.10.6",
    "python-multipart>=0.0.20",
    "scipy>=1.15.1",
    "soundfile>=0.13.1",
    "torch>=2.6.0",
    "transformers>=4.48.2",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "ipython>=8.31.0",
    "ruff>=0.9.4",
]

[tool.uv]
default-groups = []
