[project]
name = "tts-parler-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.3.0",
    "fastapi[standard]>=0.115.7",
    "parler-tts",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "transformers==4.46.1",
]

[tool.uv.sources]
parler-tts = { git = "https://github.com/huggingface/parler-tts.git" }

[dependency-groups]
dev = [
    "ruff>=0.9.3",
]

[tool.uv]
default-groups = []